src/app/main-component/atf/atf.component.scss
.hero {
  min-height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
  background: url("./../../../../public/assets/png/Design material/01_Background/Design Size Relation@3x/01_Hero.png");
  background-position: center 95%;
  background-size: cover;
  color: white;
  z-index: 1;
}

.max-content {
  max-width: 1440px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  z-index: 2;
}

.atf-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 1100px;
  width: 100%;
  padding: 0 20px;
}

.hero-row {
  display: flex;
  align-items: center;
  width: 80%;
}

.hero-row--top,
.hero-row--bottom {
  position: relative;
}
.rt-top{
  margin-bottom: 25px;
}

.hero-row-space {
  justify-content: space-between;
  align-items: center;
  height: 86px;
  position: relative;
}

.hand-hello {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
  cursor: url("/assets/hand-pointer.png"), auto;
}

.hello-btn {
  border: 2px solid white;
  padding: 0.75rem 2rem;
  background: transparent;
  border-radius: 25px;
  color: white;
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  transition: background 0.5s, color 0.5s;
  font-size: 1.1rem;
  font-weight: 600;
  margin-bottom: 25px;
  cursor: url("/assets/hand-pointer.png"), auto;
}

.hello-btn .normal-text { transition: opacity 0.3s; cursor: url("/assets/hand-pointer.png"), auto; }
.hello-btn .hover-text { display: none; white-space: nowrap; cursor: url("/assets/hand-pointer.png"), auto; }
.hello-btn:hover {
  background: #1073ea;
  color: black;
  cursor: url("/assets/hand-pointer.png"), auto;
}
.hello-btn:hover .normal-text { display: none; }
.hello-btn:hover .hover-text { display: inline; }

.hand {
  width: 30px;
  opacity: 0;
  transform: translateX(0) rotate(0deg);
  transition: transform 1s, opacity 0.5s;
  position: absolute;
  top: -40px;
  left: 0;
}

.hello-btn:hover + .hand {
  opacity: 1;
  transform: translateX(240px) rotate(720deg);
  transition: transform 1s, opacity 0.2s;
}

.hello-btn:not(:hover) + .hand {
  opacity: 0;
  transform: translateX(0) rotate(0deg);
  transition: transform 1s, opacity 0.5s;
}

.spacer {
  flex: 1;
}

.responsive-title {
  font-size: clamp(2rem, 8vw, 6rem);
  margin: 0;
  text-wrap: balance;
  letter-spacing: 0.05em;
  font-weight: 800;
  line-height: 0.9;
  margin: -0.5rem 0;
}

.responsive-title span {
  display: inline-block;
  transition: color 0.5s;
  color: #fff;
  cursor: url("/assets/hand-pointer.png"), auto;
  text-align: center;
}

.responsive-title span:hover {
  color: #1aa8b5;
}

.hero-pic {
  align-self: flex-end;
  margin-bottom: 25px;
  margin-right: 50px;
  max-width: 200px;
  width: 30%;
  object-fit: cover;
  transform: rotate(10deg);
}
.atf-btn {
  margin-top: 25px;
  display: inline-block;
  padding: 0.75rem 2rem;
  background-color: transparent;
  color: white;
  font-weight: 600;
  border: 2px solid white;
  border-radius: 25px;
  box-shadow: 2px 2px 0px 1px #ffffff;
  cursor: pointer;
  transition: all 0.2s;
  font-size: 1.2rem;
  cursor: url("/assets/hand-pointer.png"), auto;
}

.atf-btn:hover {
  background: #24dd80;
  color: black;
  box-shadow: none;
  transform: translateY(2px);
  cursor: url("/assets/hand-pointer.png"), auto;
}

.hero-socials {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  z-index: 3;
  align-self: flex-start;
  padding: 0 56px; 
}

.social-circle {
  border: 2px solid white;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  width: 48px;
  height: 48px;
  background: rgba(0,0,0,0.15);
  transition: background 0.3s;
  cursor: url("/assets/hand-pointer.png"), auto;
}

.social-circle:hover {
  background: #1aa8b5;
}

.social-pic {
  width: 26px;
  height: 26px;
  object-fit: contain;
  cursor: url("/assets/hand-pointer.png"), auto;
}
.hero-pic-mobile{
  display: none;
}

@media (min-width: 1800px) {
  .atf-content{
    margin-bottom: 2rem;
  }

  .hero{
    background-position: center 95%;
  }
}
@media (max-width: 767px) {
.hero-pic-mobile{
  display: block;
  transform: rotate(10deg);
  width: 200px;
  height: auto;
}
}

@media (max-width: 767px) {
  .rt-top{
    margin-bottom: 0;
  }
  .atf-btn{
    margin: 0;
  }
  .hello-btn{
    margin: 0;
  }
  .responsive-title {
    font-size: 16.8vw; // Responsive Schriftgröße
    text-align: center; // Zentriert den Text
    letter-spacing: -0.06em; // Leicht engerer Buchstabenabstand
    line-height: 1.1; // Erhöhte Zeilenhöhe für bessere Lesbarkeit
  }
.hero{
  align-items: flex-start;
}
.hero-socials{
  display: none;
}
.hero-pic{
display: none;
}
.atf-content{
    position: static;
    margin-top: -50px;
}
.max-content{
  padding: 0;
  margin-top: 150px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.atf-content{
  width: 100%;
  margin-top: 25px;

}
.hero-row {
  align-self: flex-start;
  position: static;
  width: 100%;
  margin: 0;
}
.spacer{
  flex: 0;
  display: none;
}
.hero-row--bottom{
  display: flex;
  justify-content: flex-end;
  .atf-btn{
    height: 45px;
    width: max-content;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
  }
  .hello-btn{
    height: 45px;
    width: max-content;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center; 
    margin-bottom: 20px;
  }
}

}
@media (max-width: 400px) {
  .responsive-title {
    font-size: 14.5vw; // Verwendet nur viewport width für echte Responsivität
    text-align: start;
    letter-spacing: -0.03em;
    line-height: 0.85; // Kompaktere Zeilen
  }
  
  .max-content{
    margin: 0;
    padding: 0 10px; // Minimal padding für Bildschirmränder
  }
  
  .atf-content{
    margin-top: 125px;
    width: 100%;
  }
  
  .hero-pic-mobile{
    width: 50%;
    height: auto;
    margin-top: 25px;
  }
}

